--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img class="Logo-Booki" src="img/booki@3x.png" alt="Logo-Booki"/>
+        <img class="Logo-Booki" src="img/booki3x.png" alt="Logo-Booki"/>
             <nav>
                <ul>
                    <li class="Accueil-Hebergements">
